# visualizer

./: .gitignore  AGENTS.md  Pipfile  Readme.md  command.txt  docker-compose.dev.yml  script.py
nginx/: Dockerfile.dev.nginx  nginx.dev.conf
producer/: Dockerfile.producer  LinkToPy.py  Pipfile  producer.py  pyproject.toml  requirements.txt  test_producer.py
visualizer/: Dockerfile.web  Pipfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt  urls.py  views.py
visualizer/templates/visualizer/: visualizer.html
visualizer/visualizer/: consumer.py  tests.py  urls.py  views.py
visualizer/visualizer/templates/visualizer/: trippy.html  visualizer.html
visualizer/vj/: asgi.py  settings.py  urls.py
