[project]
name = "visualizer"
version = "0.1.0"
description = "Django BPM stream consumer and web frontend"
requires-python = ">=3.14.6"
dependencies = [
    "django>=6.0",
    "gunicorn>=20.1.0",
    "uvicorn>=0.22.0",
    "pyzmq>=22.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
